--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,4 +4,5 @@ build:
 python:
     version: 3.6
     setup_py_install: true
-    requirements_file: requirements-dev.txt
+    extra_requirements:
+        - dev
