--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ python:
   #- "3.7-dev"
 
 install:
-  - python setup.py develop
-  - pip install -r requirements-dev.txt
+  - pip install -e ".[dev]"
 
 script:
   - make lint
