add test coverage, closes #19

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,9 @@
 [pylava]
 ignore = E501
 
+[pytest]
+addopts = --cov=libestg3b --cov-report html
+
 [tox]
 envlist = py36,py37
 skip_missing_interpreters = true
