--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 ignore = E501
 
 [pytest]
-addopts = --cov=libestg3b --cov-report html
+addopts = --cov=libestg3b --cov-report xml
 
 [tox]
 envlist = py36,py37
